# matrix-vector-toy

./: CMakeLists.txt  README.md  code.cpp  haha.txt  mathvector.cpp  mathvector.h  mathvector_main.cpp  matrix.cpp  matrix.h  matrix_main.cpp  uhuhu.txt
include/: mathvector.h  matrix.h  solver.h
src/: mathvector.cpp  matrix.cpp  solver.cpp
tests/: main.cpp  mathvector_main.cpp  matrix_main.cpp  solver_test.cpp
